<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_pindahActivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_dg_data"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_pindahActivityDgData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_dg_objek"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_pindahActivityDgObjek"/>

</LinearLayout>